--- a/kgp/.classpath
+++ b/kgp/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="C:/Users/user2/Downloads/mysql-connector-java-8.0.12/mysql-connector-java-8.0.12/mysql-connector-java-8.0.12.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/MySQL/Connector.J 5.1/mysql-connector-java-5.1.36-bin.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cor"/>
-	<classpathentry kind="lib" path="C:/RoSoft/lib/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/RoSoft/lib/jgoodies-common-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/RoSoft/lib/jgoodies-looks-2.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/RoSoft/lib/junit-4.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ekki/Documents/jCalendar/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ekki/Documents/jCalendar/lib/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ekki/Documents/jCalendar/lib/jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ekki/Documents/jCalendar/lib/junit-4.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
