--- a/kgp/pom.xml
+++ b/kgp/pom.xml
@@ -42,6 +42,10 @@
   		<groupId>org.junit.jupiter</groupId>
   		<artifactId>junit-jupiter-api</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
@@ -65,6 +69,11 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
 		</dependency>
   	</dependencies>
   </dependencyManagement>
