--- a/kgp/pom.xml
+++ b/kgp/pom.xml
@@ -77,4 +77,7 @@
 		</dependency>
   	</dependencies>
   </dependencyManagement>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
