--- a/kgp/pom.xml
+++ b/kgp/pom.xml
@@ -51,6 +51,21 @@
   		<artifactId>itextpdf</artifactId>
   		<version>5.5.13</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.itextpdf</groupId>
+  		<artifactId>kernel</artifactId>
+  		<version>7.0.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.itextpdf</groupId>
+  		<artifactId>layout</artifactId>
+  		<version>7.0.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-log4j12</artifactId>
+  		<version>1.7.18</version>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
