--- a/kgp/pom.xml
+++ b/kgp/pom.xml
@@ -48,23 +48,15 @@
   	</dependency>
   	<dependency>
   		<groupId>com.itextpdf</groupId>
-  		<artifactId>itextpdf</artifactId>
-  		<version>5.5.13</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.itextpdf</groupId>
   		<artifactId>kernel</artifactId>
-  		<version>7.0.0</version>
   	</dependency>
   	<dependency>
   		<groupId>com.itextpdf</groupId>
   		<artifactId>layout</artifactId>
-  		<version>7.0.0</version>
   	</dependency>
   	<dependency>
   		<groupId>org.slf4j</groupId>
   		<artifactId>slf4j-log4j12</artifactId>
-  		<version>1.7.18</version>
   	</dependency>
   </dependencies>
   <dependencyManagement>
@@ -94,6 +86,21 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.13</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>kernel</artifactId>
+			<version>7.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>layout</artifactId>
+			<version>7.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.18</version>
 		</dependency>
   	</dependencies>
   </dependencyManagement>
